@@ -12,4 +12,14 @@ struct template_stack {
   struct template_stack *next;
 };
 
+struct question_stack_iterator {
+  struct question_stack *stack;
+  void *child_iterator;
+};
+
+struct template_stack_iterator {
+  struct template_stack *stack;
+  void *child_iterator;
+};
+
 #endif
