@@ -7,6 +7,8 @@ cdebconf (0.78) UNRELEASED; urgency=low
   * Attilio Fiandrotti
     - Enhanced gtk frontend with support for always displaying the main
       menu and "jumping" between menu items. Lots of other changes.
+  * Colin Watson
+    - Add iterate methods to the stack database module.
 
  -- Colin Watson <cjwatson@debian.org>  Mon,  9 May 2005 19:23:45 +0100
 
